# awsrightsizer

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  comm-report_2018-07-06.csv  gov-report_2018-07-06.csv  pyproject.toml  report_2018-07-05.csv  report_2018-07-06.csv  requirements-dev.txt  requirements.txt  rightsizer.py  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
modules/: classes.py
rightsizer/: AwsRightSizer.py  __init__.py  main.py
src/rightsizer/: AwsRightSizer.py  main.py
