[tool.poetry]
name = "awsrightsizer"
version = "1.0.7.1"
description = "A Python3 tool to help you determine the correct instance types to use for your running EC2/RDS instances."
authors = ["Jordan Gregory <jordan@gregory-dev.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.9"