[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "awsrightsizer"
version = "1.1.2"
description = "A Python3 tool to help you determine the correct instance types to use for your running EC2/RDS instances."
authors = ["Jordan Gregory <jordan@gregory-dev.io>"]
license = "Apache-2.0"
readme = "README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3 :: Only'
]
documentation = "http://awsrightsizer.readthedocs.io"
repository = "https://github.com/Gregory-Development/awsrightsizer/"
packages = [
    { include = "rightsizer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.9"
click = "^7.0"

[tool.poetry.dev-dependencies]
pytest = "^3.9"

[tool.poetry.scripts]
rightsizer = 'rightsizer.main:main'